# zk-aadhar

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: parse_aadhar.rs
crates/core/src/: didcomm.rs  error.rs  lib.rs
crates/core/src/circuit/: age_proof.rs  attribute_proof.rs  batch_proof.rs  commitment.rs  config.rs  mod.rs  prover.rs  range_proof.rs  verifier.rs
crates/core/src/crypto/: c14n.rs  cert.rs  mod.rs  rsa_verifier.rs  xmldsig_verifier.rs
crates/core/src/xml/: mod.rs  parser.rs  types.rs
crates/core/tests/: integration_test.rs
crates/nodejs/: .npmignore  Cargo.toml  README.md  example.js  index.d.ts  index.js  package-lock.json  package.json  test.js
crates/nodejs/src/: lib.rs
