[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/nodejs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ajna Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Cryptography - Native verification
rsa = { version = "0.9", features = ["sha2"] }
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
digest = "0.10"
x509-parser = "0.16"
num-bigint-dig = "0.8"
xml_c14n = "0.3"

# XML Processing
quick-xml = "0.36"
zip = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
tempfile = "3.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Plonky3 - Zero-Knowledge Proofs
p3-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3" }

# Plonky3 Crypto
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }

# Plonky3 PCS (Polynomial Commitment Scheme)
p3-fri = { git = "https://github.com/Plonky3/Plonky3" }
p3-circle = { git = "https://github.com/Plonky3/Plonky3" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3" }

# Plonky3 Utilities
p3-challenger = { git = "https://github.com/Plonky3/Plonky3" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3" }
p3-util = { git = "https://github.com/Plonky3/Plonky3" }

# Additional dependencies for ZK
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
