[package]
name = "aadhar-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aadhar-zk"
path = "src/main.rs"

[dependencies]
aadhar-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
serde_json = "1.0"
p3-field = { workspace = true }
p3-mersenne-31 = { workspace = true }
